--- a/service.html
+++ b/service.html
@@ -133,13 +133,14 @@
                     </p>
                 </div>
                 <div class="row g-4">
-                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+                    <!-- First Row -->
+                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s1.jpeg" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
-                                <a href="#" class="h4 d-inline-block mb-4"> Managed Services</a>
+                                <a href="#" class="h4 d-inline-block mb-4">Managed Services</a>
                                 <p class="mb-4">
                                     Our Managed IT Services provide proactive, reliable support to keep your business running smoothly. 
                                     From network monitoring and cybersecurity to data backups and software updates, we handle the day-to-day 
@@ -150,7 +151,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s2.jpg" class="img-fluid rounded-top w-100" alt="Image">
@@ -169,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s3..jpg" class="img-fluid rounded-top w-100" alt="Image">
@@ -189,7 +190,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+                    
+                    <!-- Second Row -->
+                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s4.jpg" class="img-fluid rounded-top w-100" alt="Image">
@@ -206,7 +209,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s5.webp" class="img-fluid rounded-top w-100" alt="Image">
@@ -226,7 +229,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s6.jpg" class="img-fluid rounded-top w-100" alt="Image">
@@ -250,6 +253,7 @@
             </div>
         </div>
         <!-- Services End -->
+
 
         <!-- Offer Start 
         <div class="container-fluid offer-section pb-5">
