--- a/service.html
+++ b/service.html
@@ -133,8 +133,8 @@
                     </p>
                 </div>
                 <div class="row g-4">
-                    <!-- First Row -->
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
+                    <!-- First Service -->
+                    <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s1.jpeg" class="img-fluid rounded-top w-100" alt="Image">
@@ -150,7 +150,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s">
+                    <!-- Second Service -->
+                    <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s2.jpg" class="img-fluid rounded-top w-100" alt="Image">
@@ -168,7 +169,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.6s">
+                    <!-- Third Service -->
+                    <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s3..jpg" class="img-fluid rounded-top w-100" alt="Image">
@@ -187,9 +189,8 @@
                             </div>
                         </div>
                     </div>
-                    
-                    <!-- Second Row -->
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
+                    <!-- Fourth Service -->
+                    <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s4.jpg" class="img-fluid rounded-top w-100" alt="Image">
@@ -205,7 +206,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s">
+                    <!-- Fifth Service -->
+                    <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s5.webp" class="img-fluid rounded-top w-100" alt="Image">
@@ -224,7 +226,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.6s">
+                    <!-- Sixth Service -->
+                    <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-img">
                                 <img src="img/s6.jpg" class="img-fluid rounded-top w-100" alt="Image">
@@ -247,6 +250,7 @@
             </div>
         </div>
         <!-- Services End -->
+
 
 
         <!-- Offer Start 
