--- a/service.html
+++ b/service.html
@@ -119,7 +119,6 @@
         </div>
         <!-- Navbar & Hero End -->
 
-
         <!-- Services Start -->
         <div class="container-fluid service pb-5">
             <div class="container pb-5">
@@ -135,9 +134,9 @@
                 <div class="row g-4">
                     <!-- First Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <img src="img/s1.jpeg" class="img-fluid rounded-top w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/s1.jpeg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Managed Services</a>
@@ -152,9 +151,9 @@
                     </div>
                     <!-- Second Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <img src="img/s2.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/s2.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Residential</a>
@@ -171,9 +170,9 @@
                     </div>
                     <!-- Third Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <img src="img/s3..jpg" class="img-fluid rounded-top w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/s3..jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Networks and Security</a>
@@ -191,9 +190,9 @@
                     </div>
                     <!-- Fourth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <img src="img/s4.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/s4.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Phone and Tablet Repair</a>
@@ -208,9 +207,9 @@
                     </div>
                     <!-- Fifth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <img src="img/s5.webp" class="img-fluid rounded-top w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/s5.webp" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
@@ -228,9 +227,9 @@
                     </div>
                     <!-- Sixth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <img src="img/s6.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/s6.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">IT Consulting</a>
@@ -250,8 +249,6 @@
             </div>
         </div>
         <!-- Services End -->
-
-
 
         <!-- Offer Start 
         <div class="container-fluid offer-section pb-5">
