--- a/service.html
+++ b/service.html
@@ -132,11 +132,10 @@
                     </p>
                 </div>
                 <div class="row g-4">
-                    <!-- First Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4">
-                                <img src="img/s1.jpeg" class="img-fluid rounded w-100" alt="Image">
+                            <div class="service-img me-4" style="width: 200px; height: 200px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
+                                <img src="img/s1.jpeg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Managed Services</a>
@@ -148,7 +147,7 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
+                    </div>                    
                     <!-- Second Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
