--- a/service.html
+++ b/service.html
@@ -132,25 +132,27 @@
                     </p>
                 </div>
                 <div class="row g-4">
+                    <!-- First Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4" style="width: 200px; height: 200px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
+                            <div class="service-img me-4" style="width: 250px; height: 150px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
                                 <img src="img/s1.jpeg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Managed Services</a>
                                 <p class="mb-4">
-                                    Our Managed IT Services provide proactive, reliable support to keep your business running smoothly. 
+                                    Our Managed IT Services provide proactive, reliable support to keep your business running smoothly.
                                     From network monitoring and cybersecurity to data backups and software updates, we handle the day-to-day 
                                     IT operations so you can focus on what matters most—growing your business. With expert management, enhanced 
                                     security, and 24/7 support, we ensure your technology is always performing at its best.
                                 </p>
                             </div>
                         </div>
-                    </div>                    
+                    </div>
+                    <!-- Second Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4" style="width: 200px; height: 200px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
+                            <div class="service-img me-4" style="width: 250px; height: 150px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
                                 <img src="img/s2.jpg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
@@ -165,12 +167,12 @@
                                 </p>
                             </div>
                         </div>
-                    </div>                    
+                    </div>
                     <!-- Third Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4">
-                                <img src="img/s3..jpg" class="img-fluid rounded w-100" alt="Image">
+                            <div class="service-img me-4" style="width: 250px; height: 150px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
+                                <img src="img/s3.jpg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Networks and Security</a>
@@ -189,8 +191,8 @@
                     <!-- Fourth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4">
-                                <img src="img/s4.jpg" class="img-fluid rounded w-100" alt="Image">
+                            <div class="service-img me-4" style="width: 250px; height: 150px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
+                                <img src="img/s4.jpg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Phone and Tablet Repair</a>
@@ -206,8 +208,8 @@
                     <!-- Fifth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4">
-                                <img src="img/s5.webp" class="img-fluid rounded w-100" alt="Image">
+                            <div class="service-img me-4" style="width: 250px; height: 150px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
+                                <img src="img/s5.webp" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
@@ -226,8 +228,8 @@
                     <!-- Sixth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4">
-                                <img src="img/s6.jpg" class="img-fluid rounded w-100" alt="Image">
+                            <div class="service-img me-4" style="width: 250px; height: 150px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
+                                <img src="img/s6.jpg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">IT Consulting</a>
@@ -243,6 +245,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
