--- a/service.html
+++ b/service.html
@@ -208,7 +208,7 @@
                     <!-- Fifth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4" style="width: 500px; height: 300px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
+                            <div class="service-img me-4" style="width: 500px; height: 300px;">
                                 <img src="img/s5.webp" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
