--- a/service.html
+++ b/service.html
@@ -135,13 +135,13 @@
                     <!-- First Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4" style="width: 500px; height: 300px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
-                                <img src="img/s1.jpeg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
+                            <div class="service-img me-4">
+                                <img src="img/s1.jpeg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Managed Services</a>
                                 <p class="mb-4">
-                                    Our Managed IT Services provide proactive, reliable support to keep your business running smoothly.
+                                    Our Managed IT Services provide proactive, reliable support to keep your business running smoothly. 
                                     From network monitoring and cybersecurity to data backups and software updates, we handle the day-to-day 
                                     IT operations so you can focus on what matters most—growing your business. With expert management, enhanced 
                                     security, and 24/7 support, we ensure your technology is always performing at its best.
@@ -152,8 +152,8 @@
                     <!-- Second Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4" style="width: 500px; height: 300px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
-                                <img src="img/s2.jpg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
+                            <div class="service-img me-4">
+                                <img src="img/s2.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Residential</a>
@@ -171,8 +171,8 @@
                     <!-- Third Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4" style="width: 500px; height: 300px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
-                                <img src="img/s3.jpg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
+                            <div class="service-img me-4">
+                                <img src="img/s3..jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Networks and Security</a>
@@ -191,8 +191,8 @@
                     <!-- Fourth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4" style="width: 500px; height: 300px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
-                                <img src="img/s4.jpg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
+                            <div class="service-img me-4">
+                                <img src="img/s4.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Phone and Tablet Repair</a>
@@ -208,8 +208,8 @@
                     <!-- Fifth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4" style="width: 500px; height: 300px;">
-                                <img src="img/s5.webp" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
+                            <div class="service-img me-4">
+                                <img src="img/s5.webp" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
@@ -228,8 +228,8 @@
                     <!-- Sixth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item d-flex">
-                            <div class="service-img me-4" style="width: 500px; height: 300px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
-                                <img src="img/s6.jpg" class="img-fluid rounded" alt="Image" style="width: 100%; height: 100%; object-fit: cover;">
+                            <div class="service-img me-4">
+                                <img src="img/s6.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">IT Consulting</a>
@@ -245,7 +245,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
