--- a/service.html
+++ b/service.html
@@ -153,7 +153,7 @@
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
                             <div class="service-img me-4">
-                                <img src="img/s2.jpg" class="img-fluid rounded w-100" alt="Image">
+                                <img src="img/sms2.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Residential</a>
