ready to resize final

--- a/service.html
+++ b/service.html
@@ -209,7 +209,7 @@
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
                             <div class="service-img me-4">
-                                <img src="img/s5.webp" class="img-fluid rounded w-100" alt="Image">
+                                <img src="img/mds5.png" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
@@ -229,7 +229,7 @@
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item d-flex">
                             <div class="service-img me-4">
-                                <img src="img/s6.jpg" class="img-fluid rounded w-100" alt="Image">
+                                <img src="img/mds6.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">IT Consulting</a>
