--- a/service.html
+++ b/service.html
@@ -136,7 +136,7 @@
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item d-flex">
                             <div class="service-img me-4">
-                                <img src="img/s1.jpeg" class="img-fluid rounded w-100" alt="Image">
+                                <img src="img/s1.jpeg" class="img-fluid rounded h-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Managed Services</a>
@@ -153,7 +153,7 @@
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
                             <div class="service-img me-4">
-                                <img src="img/mds2.jpg" class="img-fluid rounded w-100" alt="Image">
+                                <img src="img/mds2.jpg" class="img-fluid rounded h-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Residential</a>
@@ -172,7 +172,7 @@
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item d-flex">
                             <div class="service-img me-4">
-                                <img src="img/mds3.jpg" class="img-fluid rounded w-100" alt="Image">
+                                <img src="img/mds3.jpg" class="img-fluid rounded h-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Networks and Security</a>
@@ -192,7 +192,7 @@
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item d-flex">
                             <div class="service-img me-4">
-                                <img src="img/mds4.jpg" class="img-fluid rounded w-100" alt="Image">
+                                <img src="img/mds4.jpg" class="img-fluid rounded h-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Phone and Tablet Repair</a>
@@ -209,7 +209,7 @@
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item d-flex">
                             <div class="service-img me-4">
-                                <img src="img/mds5.png" class="img-fluid rounded w-100" alt="Image">
+                                <img src="img/mds5.png" class="img-fluid rounded h-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
@@ -229,7 +229,7 @@
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item d-flex">
                             <div class="service-img me-4">
-                                <img src="img/mds61.jpg" class="img-fluid rounded w-100" alt="Image">
+                                <img src="img/mds61.jpg" class="img-fluid rounded h-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">IT Consulting</a>
