--- a/service.html
+++ b/service.html
@@ -118,7 +118,7 @@
             <!-- Header End -->
         </div>
         <!-- Navbar & Hero End -->
-         
+
         <!-- Services Start -->
         <div class="container-fluid service pb-5">
             <div class="container pb-5">
@@ -134,11 +134,11 @@
                 <div class="row g-4">
                     <!-- First Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="service-item d-flex flex-column align-items-center">
-                            <div class="service-img mb-4" style="width: 100%; overflow: hidden;">
-                                <img src="img/s1.jpeg" class="img-fluid w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/s1.jpeg" class="img-fluid rounded w-100" alt="Image">
                             </div>
-                            <div class="rounded-bottom p-4 text-center text-md-start">
+                            <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Managed Services</a>
                                 <p class="mb-4">
                                     Our Managed IT Services provide proactive, reliable support to keep your business running smoothly. 
@@ -151,11 +151,11 @@
                     </div>
                     <!-- Second Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="service-item d-flex flex-column align-items-center">
-                            <div class="service-img mb-4" style="width: 100%; overflow: hidden;">
-                                <img src="img/mds2.jpg" class="img-fluid w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/mds2.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
-                            <div class="rounded-bottom p-4 text-center text-md-start">
+                            <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Residential</a>
                                 <p class="mb-4">
                                     We provide comprehensive IT support for your home, from setting up secure Wi-Fi 
@@ -170,11 +170,11 @@
                     </div>
                     <!-- Third Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="service-item d-flex flex-column align-items-center">
-                            <div class="service-img mb-4" style="width: 100%; overflow: hidden;">
-                                <img src="img/mds3.jpg" class="img-fluid w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/mds3.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
-                            <div class="rounded-bottom p-4 text-center text-md-start">
+                            <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Networks and Security</a>
                                 <p class="mb-4">
                                     We specialize in designing and implementing robust network infrastructures for businesses 
@@ -190,11 +190,11 @@
                     </div>
                     <!-- Fourth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="service-item d-flex flex-column align-items-center">
-                            <div class="service-img mb-4" style="width: 100%; overflow: hidden;">
-                                <img src="img/mds4.jpg" class="img-fluid w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/mds4.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
-                            <div class="rounded-bottom p-4 text-center text-md-start">
+                            <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Phone and Tablet Repair</a>
                                 <p class="mb-4">
                                     Get your devices back in action with our fast, reliable phone and tablet repair services. 
@@ -207,11 +207,11 @@
                     </div>
                     <!-- Fifth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="service-item d-flex flex-column align-items-center">
-                            <div class="service-img mb-4" style="width: 100%; overflow: hidden;">
-                                <img src="img/mds5.png" class="img-fluid w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/mds5.png" class="img-fluid rounded w-100" alt="Image">
                             </div>
-                            <div class="rounded-bottom p-4 text-center text-md-start">
+                            <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
                                 <p class="mb-4">
                                     Whether you need a high-performance custom PC built to your exact specifications or 
@@ -227,11 +227,11 @@
                     </div>
                     <!-- Sixth Service -->
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="service-item d-flex flex-column align-items-center">
-                            <div class="service-img mb-4" style="width: 100%; overflow: hidden;">
-                                <img src="img/mds61.jpg" class="img-fluid w-100" alt="Image">
+                        <div class="service-item d-flex">
+                            <div class="service-img me-4">
+                                <img src="img/mds61.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
-                            <div class="rounded-bottom p-4 text-center text-md-start">
+                            <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">IT Consulting</a>
                                 <p class="mb-4">
                                     Unlock the full potential of your business with our expert IT consulting services. 
@@ -249,7 +249,6 @@
             </div>
         </div>
         <!-- Services End -->
-
 
         <!-- Offer Start 
         <div class="container-fluid offer-section pb-5">
