--- a/service.html
+++ b/service.html
@@ -139,7 +139,7 @@
                                 <img src="img/s1.jpeg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
-                                <a href="#" class="h4 d-inline-block mb-4">Managed Services</a>
+                                <a href="offer.html" class="h4 d-inline-block mb-4">Managed Services</a>
                                 <p class="mb-4">
                                     Our Managed IT Services provide proactive, reliable support to keep your business running smoothly. 
                                     From network monitoring and cybersecurity to data backups and software updates, we handle the day-to-day 
@@ -156,7 +156,7 @@
                                 <img src="img/mds2.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
-                                <a href="#" class="h4 d-inline-block mb-4">Residential</a>
+                                <a href="contact.html" class="h4 d-inline-block mb-4">Residential</a>
                                 <p class="mb-4">
                                     We provide comprehensive IT support for your home, from setting up secure Wi-Fi 
                                     and troubleshooting devices to installing security cameras, smart home systems, 
@@ -175,7 +175,7 @@
                                 <img src="img/mds3.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
-                                <a href="#" class="h4 d-inline-block mb-4">Networks and Security</a>
+                                <a href="contact.html" class="h4 d-inline-block mb-4">Networks and Security</a>
                                 <p class="mb-4">
                                     We specialize in designing and implementing robust network infrastructures for businesses 
                                     of all sizes. Our network installation services ensure seamless connectivity, from routers 
@@ -195,7 +195,7 @@
                                 <img src="img/mds4.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
-                                <a href="#" class="h4 d-inline-block mb-4">Phone and Tablet Repair</a>
+                                <a href="contact.html" class="h4 d-inline-block mb-4">Phone and Tablet Repair</a>
                                 <p class="mb-4">
                                     Get your devices back in action with our fast, reliable phone and tablet repair services. 
                                     From cracked screens and battery replacements to water damage and hardware issues, our expert 
@@ -212,7 +212,7 @@
                                 <img src="img/mds5.png" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
-                                <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
+                                <a href="contact.html" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
                                 <p class="mb-4">
                                     Whether you need a high-performance custom PC built to your exact specifications or 
                                     professional repair services for desktops and laptops, we've got you covered. Our expert 
@@ -232,7 +232,7 @@
                                 <img src="img/mds61.jpg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
-                                <a href="#" class="h4 d-inline-block mb-4">IT Consulting</a>
+                                <a href="contact.html" class="h4 d-inline-block mb-4">IT Consulting</a>
                                 <p class="mb-4">
                                     Unlock the full potential of your business with our expert IT consulting services. 
                                     We work closely with your team to assess your technology needs, optimize your 
