--- a/testimonial.html
+++ b/testimonial.html
@@ -262,13 +262,15 @@
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <a href="/about.html"><i class="fas fa-angle-right me-2"></i> About Us</a>
                             <a href="/contact.html"><i class="fas fa-angle-right me-2"></i> Contact us</a>
+                            <a href="/service.html"><i class="fas fa-angle-right me-2"></i> Our Services</a>
+                            <a href="/feature.html"><i class="fas fa-angle-right me-2"></i> Our Plans</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Support</h4>
-                            <a href="/testimonial.html"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
-                            <a href="/testimonial.html"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
+                            <a href="/offer.html"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
+                            <a href="/offer.html"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
                             <a href="/FAQ.html"><i class="fas fa-angle-right me-2"></i> FAQ</a>
                         </div>
                     </div>
@@ -277,7 +279,7 @@
                             <h4 class="text-white mb-4">Contact Info</h4>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-map-marker-alt text-primary me-3"></i>
-                                <p class="text-white mb-0">123 Street New York.USA</p>
+                                <p class="text-white mb-0">Michigan, USA</p>
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-envelope text-primary me-3"></i>
