--- a/service.html
+++ b/service.html
@@ -139,7 +139,7 @@
                                 <img src="img/s1.jpeg" class="img-fluid rounded w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
-                                <a href="offer.html" class="h4 d-inline-block mb-4">Managed Services</a>
+                                <a href="feature.html" class="h4 d-inline-block mb-4">Managed Services</a>
                                 <p class="mb-4">
                                     Our Managed IT Services provide proactive, reliable support to keep your business running smoothly. 
                                     From network monitoring and cybersecurity to data backups and software updates, we handle the day-to-day 
