--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" href="/img/waveD.png" type="image/x-icon" />
     <title>NextWave Technologies</title>
+    <!-- add icon link -->
+    
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
