--- a/feature.html
+++ b/feature.html
@@ -136,7 +136,7 @@
                     <!-- Basic Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o11.jpg" class="card-img-top" alt="Basic Plan">
+                            <img src="img/o11.jpg" class="card-img-top w-100" alt="Basic Plan">
                             <div class="card-body">
                                 <h5 class="card-title">Basic Monitoring and Protection Plan</h5>
                                 <p class="card-text">
