--- a/feature.html
+++ b/feature.html
@@ -123,6 +123,7 @@
         <!-- Offer Start -->
         <div class="container-fluid offer-section pb-5">
             <div class="container pb-5">
+                <br>
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-primary">Managed Services</h4>
                     <h1 class="display-5 mb-4">Plans We Offer</h1>
@@ -136,7 +137,7 @@
                     <!-- Basic Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o11.jpg" class="card-img-top w-100" alt="Basic Plan">
+                            <img src="img/o11.jpg" class="card-img-top" alt="Basic Plan">
                             <div class="card-body">
                                 <h5 class="card-title">Basic Monitoring and Protection Plan</h5>
                                 <p class="card-text">
