--- a/feature.html
+++ b/feature.html
@@ -123,7 +123,6 @@
         <!-- Offer Start -->
         <div class="container-fluid offer-section pb-5">
             <div class="container pb-5">
-                <br>
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-primary">Managed Services</h4>
                     <h1 class="display-5 mb-4">Plans We Offer</h1>
@@ -137,7 +136,7 @@
                     <!-- Basic Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o11.jpg" class="card-img-top" alt="Basic Plan">
+                            <img src="img/o11.jpg" class="card-img-top" alt="Basic Plan" style="width: 100px; height: 80px; object-fit: cover;">
                             <div class="card-body">
                                 <h5 class="card-title">Basic Monitoring and Protection Plan</h5>
                                 <p class="card-text">
@@ -151,7 +150,7 @@
                     <!-- Plus Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o22.jpg" class="card-img-top" alt="Plus Plan">
+                            <img src="img/o22.jpg" class="card-img-top" alt="Plus Plan" style="width: 100px; height: 80px; object-fit: cover;">
                             <div class="card-body">
                                 <h5 class="card-title">Plus Monitoring and Protection Plan</h5>
                                 <p class="card-text">
@@ -165,7 +164,7 @@
                     <!-- Professional Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o43.jpg" class="card-img-top" alt="Professional Plan">
+                            <img src="img/o43.jpg" class="card-img-top" alt="Professional Plan" style="width: 100px; height: 80px; object-fit: cover;">
                             <div class="card-body">
                                 <h5 class="card-title">Professional Monitoring and Protection Plan</h5>
                                 <p class="card-text">
@@ -179,7 +178,7 @@
                     <!-- Complete Plan -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="card shadow-sm border-0">
-                            <img src="img/o54.jpg" class="card-img-top" alt="Complete Plan">
+                            <img src="img/o54.jpg" class="card-img-top" alt="Complete Plan" style="width: 100px; height: 80px; object-fit: cover;">
                             <div class="card-body">
                                 <h5 class="card-title">Complete Monitoring and Protection Plan</h5>
                                 <p class="card-text">
@@ -193,6 +192,7 @@
             </div>
         </div>
         <!-- Offer End -->
+
 
 
        <!-- Footer Start -->
