--- a/basic.html
+++ b/basic.html
@@ -119,10 +119,11 @@
         </div>
         <!-- Navbar & Hero End -->
 
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScg_Nc7lGRyYD2hmXvtlhAZtQwQRLa5SQMYxasIhyGgIAuDpA/viewform?embedded=true" width="640" height="1642" frameborder="0" marginheight="0" marginwidth="0">
-        Loading…
-        </iframe>
-        
+        <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScg_Nc7lGRyYD2hmXvtlhAZtQwQRLa5SQMYxasIhyGgIAuDpA/viewform?embedded=true" width="640" height="1642" frameborder="0" marginheight="0" marginwidth="0">
+                Loading…
+            </iframe>
+        </div>       
 
         <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
