--- a/basic.html
+++ b/basic.html
@@ -119,11 +119,12 @@
         </div>
         <!-- Navbar & Hero End -->
 
-        <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+        <div style="display: flex; justify-content: center; align-items: center;">
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScg_Nc7lGRyYD2hmXvtlhAZtQwQRLa5SQMYxasIhyGgIAuDpA/viewform?embedded=true" width="640" height="1642" frameborder="0" marginheight="0" marginwidth="0">
                 Loading…
             </iframe>
-        </div>       
+        </div>
+              
 
         <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
