--- a/basic.html
+++ b/basic.html
@@ -84,7 +84,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <div class="nav-item dropdown">
@@ -92,7 +92,7 @@
                                 <span class="dropdown-toggle">Pages</span>
                             </a>
                             <div class="dropdown-menu m-0">
-                                <a href="feature.html" class="dropdown-item">Our Plans</a>
+                                <a href="feature.html" class="dropdown-item active">Our Plans</a>
                                 <a href="team.html" class="dropdown-item">Our Team</a>
                                 <a href="offer.html" class="dropdown-item">Terms of Service</a>
                                 <a href="FAQ.html" class="dropdown-item">FAQs</a>
